--- a/index.html
+++ b/index.html
@@ -4,83 +4,42 @@
   <meta charset="UTF-8">
   <title>FWD.us Austin Chapter</title>
   <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="vendor/ytv.css">
-  <style>
-    body, html {
-      background-color: #e8632a;
-      font-family: 'Droid Serif', Georgia, serif;
-      color: #fff;
-      text-align: center;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 2.5em;
-      display: block;
-      width: 100%;
-      margin-top: -40px;
-    }
-    header {
-      text-align: left;
-    }
-    .logo {
-      width: 200px;
-    }
-
-    h3 {
-      font-family: 'Open Sans Condensed', sans-serif;
-      color: #369ff4;
-      font-size: 4em;
-    }
-
-    iframe {
-      max-width: 100%;
-    }
-
-    @media screen and (max-width: 900px) {
-      iframe {
-        width: 650px;
-        height: 333px;
-      }
-    }
-
-    @media screen and (max-width: 675px) {
-      iframe {
-        width: 450px;
-        height: 245px;
-      }
-    }
-
-    @media screen and (max-width: 475px) {
-      iframe {
-        width: 300px;
-        height: 163px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
   <header>
-    <img src="images/fwd-logo-inverse.svg" alt="" class="logo">
+    <a href="http://www.fwd.us/chapter_aus" target="_blank"><img src="images/fwd-logo.svg" alt="" class="logo"></a>
   </header>
   <h1>Austin Supports Immigration Reform</h1>
-  <div id="video_container">
-  </div>
-  <h3>Tell your representative it's time to #leadonreform</h3>
-  <a href="https://twitter.com/share" data-url="example.com"></a>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script type="text/javascript" async src="//platform.twitter.com/widgets.js"></script>
-  <script>
-    function randInt(min, max) {
-      return Math.floor(Math.random() * (max-min + 1) + min);
-    }
+  <div id="video_container"></div>
+  <h3>
+    Tell your representative it's time to #LeadOnReform   
+    <a 
+      class="twitter-share-button" 
+      href="https://twitter.com/share" 
+      data-url="http://example.com" 
+      data-text=".@McCaulPressShop I encourage you to watch these powerful videos from your constituents in support of #CIR and #LeadOnReform" 
+      data-related="fwd_us"
+      data-count="none" 
+      data-size="large">Tweet</a>
+  </h3>
+  <!-- SCRIPTS -->
+    <script type="text/javascript">
+    window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    $(document).ready(function() {
-      var videoStart = randInt(1, 9);
-      var iframe = '<iframe width="853" height="480" src="https://www.youtube.com/embed/videoseries?list=PLwVuCj2NpVjqy7RCwh3mc_GxAf8-_prut&index=' + videoStart + '" frameborder="0" allowfullscreen id="video"></iframe>';
-      $('#video_container').html(iframe);
-    });
+    <script>
+      function randInt(min, max) {
+        return Math.floor(Math.random() * (max-min + 1) + min);
+      }
 
-  </script>
+      $(document).ready(function() {
+        var videoStart = randInt(1, 9);
+        var iframe = '<iframe width="853" height="480" src="https://www.youtube.com/embed/videoseries?list=PLwVuCj2NpVjqy7RCwh3mc_GxAf8-_prut&index=' + videoStart + '" frameborder="0" allowfullscreen id="video"></iframe>';
+        $('#video_container').html(iframe);
+      });
+
+    </script>
 </body>
 </html>
