better color scheme, twitter lang, and autoplay

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <a 
       class="twitter-share-button" 
       href="https://twitter.com/share" 
-      data-url="http://example.com" 
-      data-text=".@McCaulPressShop I encourage you to watch these powerful videos from your constituents in support of #CIR and #LeadOnReform" 
+      data-url="http://fwd.us/atxvids" 
+      data-text=".@McCaulPressShop I encourage you to watch these powerful videos from Austin in support of #CIR and #LeadOnReform" 
       data-related="fwd_us"
       data-count="none" 
       data-size="large">Tweet</a>
@@ -36,7 +36,7 @@
 
       $(document).ready(function() {
         var videoStart = randInt(1, 9);
-        var iframe = '<iframe width="853" height="480" src="https://www.youtube.com/embed/videoseries?list=PLwVuCj2NpVjqy7RCwh3mc_GxAf8-_prut&index=' + videoStart + '" frameborder="0" allowfullscreen id="video"></iframe>';
+        var iframe = '<iframe width="853" height="480" src="https://www.youtube.com/embed/videoseries?list=PLwVuCj2NpVjqy7RCwh3mc_GxAf8-_prut&autoplay=1&index=' + videoStart + '" frameborder="0" allowfullscreen id="video"></iframe>';
         $('#video_container').html(iframe);
       });
 
